// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders Default without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-9x4qdd"
    >
      <div
        class="rcx-box rcx-box--full rcx-css-h9m6k6"
      >
        <div
          class="rcx-box rcx-box--full rcx-css-vlo1oi rcx-css-1cb6i7s"
          data-overlayscrollbars="host"
        >
          <div
            class="os-size-observer"
          >
            <div
              class="os-size-observer-listener"
            />
          </div>
          <div
            class=""
            data-overlayscrollbars-viewport="scrollbarHidden overflowXHidden overflowYHidden"
            style="margin-right: 0px; margin-bottom: 0px; margin-left: 0px; top: 0px; left: 0px; width: calc(100% + 0px); padding: 0px 0px 0px 0px;"
            tabindex="-1"
          >
            <div
              class="rcx-box rcx-box--full rcx-table__wrapper"
            >
              <table
                class="rcx-box rcx-box--full rcx-table--sticky rcx-table--fixed rcx-table"
              >
                <thead
                  class="rcx-box rcx-box--full rcx-table__head"
                >
                  <tr
                    class="rcx-box rcx-box--full rcx-table__row"
                  >
                    <th
                      class="rcx-box rcx-box--full rcx-table__cell--header rcx-table__cell"
                    >
                      <div
                        class="rcx-box rcx-box--full rcx-css-127j9mz"
                        wrap="no-wrap"
                      >
                        Name
                      </div>
                    </th>
                    <th
                      class="rcx-box rcx-box--full rcx-table__cell--header rcx-table__cell"
                    >
                      <div
                        class="rcx-box rcx-box--full rcx-css-127j9mz"
                        wrap="no-wrap"
                      >
                        Email
                      </div>
                    </th>
                    <th
                      class="rcx-box rcx-box--full rcx-table__cell--header rcx-table__cell rcx-css-wbqtoq"
                    >
                      <div
                        class="rcx-box rcx-box--full rcx-css-127j9mz"
                        wrap="no-wrap"
                      >
                        Actions
                      </div>
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="rcx-box rcx-box--full rcx-table__body"
                >
                  <tr
                    class="rcx-box rcx-box--full rcx-table__row"
                    role="link"
                    tabindex="0"
                  >
                    <td
                      class="rcx-box rcx-box--full rcx-table__cell rcx-css-1te28na"
                    >
                      <div
                        class="rcx-box rcx-box--full rcx-css-127j9mz"
                      >
                        <figure
                          class="rcx-box rcx-box--full rcx-avatar rcx-avatar--x40"
                        >
                          <img
                            alt=""
                            aria-hidden="true"
                            class="rcx-avatar__element rcx-avatar__element--x40"
                            data-username="user.1"
                            src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVQYV2Oora39DwAFaQJ3y3rKeAAAAABJRU5ErkJggg=="
                            title="user.1"
                          />
                        </figure>
                        <div
                          class="rcx-box rcx-box--full rcx-css-1mrdogu"
                        >
                          <div
                            class="rcx-box rcx-box--full rcx-css-1mvbnvb"
                          >
                            User 1
                          </div>
                          <div
                            class="rcx-box rcx-box--full rcx-css-1ixnlhp"
                          >
                            @user.1
                          </div>
                        </div>
                      </div>
                    </td>
                    <td
                      class="rcx-box rcx-box--full rcx-table__cell rcx-css-1te28na"
                    >
                      user1@example.com
                    </td>
                    <td
                      class="rcx-box rcx-box--full rcx-table__cell"
                    >
                      <button
                        class="rcx-box rcx-box--full rcx-button--small-square rcx-button--icon-danger rcx-button--square rcx-button--icon rcx-button"
                        title="Remove"
                        type="button"
                      >
                        <i
                          aria-hidden="true"
                          class="rcx-box rcx-box--full rcx-icon--name-trash rcx-icon rcx-css-4pvxx3"
                        >
                          
                        </i>
                      </button>
                    </td>
                  </tr>
                  <tr
                    class="rcx-box rcx-box--full rcx-table__row"
                    role="link"
                    tabindex="0"
                  >
                    <td
                      class="rcx-box rcx-box--full rcx-table__cell rcx-css-1te28na"
                    >
                      <div
                        class="rcx-box rcx-box--full rcx-css-127j9mz"
                      >
                        <figure
                          class="rcx-box rcx-box--full rcx-avatar rcx-avatar--x40"
                        >
                          <img
                            alt=""
                            aria-hidden="true"
                            class="rcx-avatar__element rcx-avatar__element--x40"
                            data-username="user.2"
                            src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVQYV2Oora39DwAFaQJ3y3rKeAAAAABJRU5ErkJggg=="
                            title="user.2"
                          />
                        </figure>
                        <div
                          class="rcx-box rcx-box--full rcx-css-1mrdogu"
                        >
                          <div
                            class="rcx-box rcx-box--full rcx-css-1mvbnvb"
                          >
                            User 2
                          </div>
                          <div
                            class="rcx-box rcx-box--full rcx-css-1ixnlhp"
                          >
                            @user.2
                          </div>
                        </div>
                      </div>
                    </td>
                    <td
                      class="rcx-box rcx-box--full rcx-table__cell rcx-css-1te28na"
                    >
                      user2@example.com
                    </td>
                    <td
                      class="rcx-box rcx-box--full rcx-table__cell"
                    >
                      <button
                        class="rcx-box rcx-box--full rcx-button--small-square rcx-button--icon-danger rcx-button--square rcx-button--icon rcx-button"
                        title="Remove"
                        type="button"
                      >
                        <i
                          aria-hidden="true"
                          class="rcx-box rcx-box--full rcx-icon--name-trash rcx-icon rcx-css-4pvxx3"
                        >
                          
                        </i>
                      </button>
                    </td>
                  </tr>
                  <tr
                    class="rcx-box rcx-box--full rcx-table__row"
                    role="link"
                    tabindex="0"
                  >
                    <td
                      class="rcx-box rcx-box--full rcx-table__cell rcx-css-1te28na"
                    >
                      <div
                        class="rcx-box rcx-box--full rcx-css-127j9mz"
                      >
                        <figure
                          class="rcx-box rcx-box--full rcx-avatar rcx-avatar--x40"
                        >
                          <img
                            alt=""
                            aria-hidden="true"
                            class="rcx-avatar__element rcx-avatar__element--x40"
                            data-username="user.3"
                            src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVQYV2Oora39DwAFaQJ3y3rKeAAAAABJRU5ErkJggg=="
                            title="user.3"
                          />
                        </figure>
                        <div
                          class="rcx-box rcx-box--full rcx-css-1mrdogu"
                        >
                          <div
                            class="rcx-box rcx-box--full rcx-css-1mvbnvb"
                          >
                            User 3
                          </div>
                          <div
                            class="rcx-box rcx-box--full rcx-css-1ixnlhp"
                          >
                            @user.3
                          </div>
                        </div>
                      </div>
                    </td>
                    <td
                      class="rcx-box rcx-box--full rcx-table__cell rcx-css-1te28na"
                    >
                      user3@example.com
                    </td>
                    <td
                      class="rcx-box rcx-box--full rcx-table__cell"
                    >
                      <button
                        class="rcx-box rcx-box--full rcx-button--small-square rcx-button--icon-danger rcx-button--square rcx-button--icon rcx-button"
                        title="Remove"
                        type="button"
                      >
                        <i
                          aria-hidden="true"
                          class="rcx-box rcx-box--full rcx-icon--name-trash rcx-icon rcx-css-4pvxx3"
                        >
                          
                        </i>
                      </button>
                    </td>
                  </tr>
                  <tr
                    class="rcx-box rcx-box--full rcx-table__row"
                    role="link"
                    tabindex="0"
                  >
                    <td
                      class="rcx-box rcx-box--full rcx-table__cell rcx-css-1te28na"
                    >
                      <div
                        class="rcx-box rcx-box--full rcx-css-127j9mz"
                      >
                        <figure
                          class="rcx-box rcx-box--full rcx-avatar rcx-avatar--x40"
                        >
                          <img
                            alt=""
                            aria-hidden="true"
                            class="rcx-avatar__element rcx-avatar__element--x40"
                            data-username="user.4"
                            src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVQYV2Oora39DwAFaQJ3y3rKeAAAAABJRU5ErkJggg=="
                            title="user.4"
                          />
                        </figure>
                        <div
                          class="rcx-box rcx-box--full rcx-css-1mrdogu"
                        >
                          <div
                            class="rcx-box rcx-box--full rcx-css-1mvbnvb"
                          >
                            User 4
                          </div>
                          <div
                            class="rcx-box rcx-box--full rcx-css-1ixnlhp"
                          >
                            @user.4
                          </div>
                        </div>
                      </div>
                    </td>
                    <td
                      class="rcx-box rcx-box--full rcx-table__cell rcx-css-1te28na"
                    >
                      user4@example.com
                    </td>
                    <td
                      class="rcx-box rcx-box--full rcx-table__cell"
                    >
                      <button
                        class="rcx-box rcx-box--full rcx-button--small-square rcx-button--icon-danger rcx-button--square rcx-button--icon rcx-button"
                        title="Remove"
                        type="button"
                      >
                        <i
                          aria-hidden="true"
                          class="rcx-box rcx-box--full rcx-icon--name-trash rcx-icon rcx-css-4pvxx3"
                        >
                          
                        </i>
                      </button>
                    </td>
                  </tr>
                  <tr
                    class="rcx-box rcx-box--full rcx-table__row"
                    role="link"
                    tabindex="0"
                  >
                    <td
                      class="rcx-box rcx-box--full rcx-table__cell rcx-css-1te28na"
                    >
                      <div
                        class="rcx-box rcx-box--full rcx-css-127j9mz"
                      >
                        <figure
                          class="rcx-box rcx-box--full rcx-avatar rcx-avatar--x40"
                        >
                          <img
                            alt=""
                            aria-hidden="true"
                            class="rcx-avatar__element rcx-avatar__element--x40"
                            data-username="user.5"
                            src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVQYV2Oora39DwAFaQJ3y3rKeAAAAABJRU5ErkJggg=="
                            title="user.5"
                          />
                        </figure>
                        <div
                          class="rcx-box rcx-box--full rcx-css-1mrdogu"
                        >
                          <div
                            class="rcx-box rcx-box--full rcx-css-1mvbnvb"
                          >
                            User 5
                          </div>
                          <div
                            class="rcx-box rcx-box--full rcx-css-1ixnlhp"
                          >
                            @user.5
                          </div>
                        </div>
                      </div>
                    </td>
                    <td
                      class="rcx-box rcx-box--full rcx-table__cell rcx-css-1te28na"
                    >
                      user5@example.com
                    </td>
                    <td
                      class="rcx-box rcx-box--full rcx-table__cell"
                    >
                      <button
                        class="rcx-box rcx-box--full rcx-button--small-square rcx-button--icon-danger rcx-button--square rcx-button--icon rcx-button"
                        title="Remove"
                        type="button"
                      >
                        <i
                          aria-hidden="true"
                          class="rcx-box rcx-box--full rcx-icon--name-trash rcx-icon rcx-css-4pvxx3"
                        >
                          
                        </i>
                      </button>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
          <div
            class="os-scrollbar os-scrollbar-horizontal os-theme-dark os-scrollbar-auto-hide os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-cornerless os-scrollbar-unusable"
            style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;"
          >
            <div
              class="os-scrollbar-track"
            >
              <div
                class="os-scrollbar-handle"
              />
            </div>
          </div>
          <div
            class="os-scrollbar os-scrollbar-vertical os-theme-dark os-scrollbar-auto-hide os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-cornerless os-scrollbar-unusable"
            style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;"
          >
            <div
              class="os-scrollbar-track"
            >
              <div
                class="os-scrollbar-handle"
              />
            </div>
          </div>
        </div>
      </div>
      <nav
        class="rcx-box rcx-box--full rcx-pagination--divider rcx-pagination rcx-css-cnkcl9"
      >
        <div
          class="rcx-box rcx-box--full rcx-pagination__left"
        >
          <span
            class="rcx-box rcx-box--full rcx-pagination__label"
          >
            Items per page:
          </span>
          <ol
            class="rcx-box rcx-box--full rcx-pagination__list"
          >
            <li
              class="rcx-box rcx-box--full rcx-pagination__list-item"
            >
              <button
                class="rcx-box rcx-box--full rcx-pagination__link"
                disabled=""
                tabindex="-1"
              >
                25
              </button>
            </li>
            <li
              class="rcx-box rcx-box--full rcx-pagination__list-item"
            >
              <button
                class="rcx-box rcx-box--full rcx-pagination__link"
                tabindex="0"
              >
                50
              </button>
            </li>
            <li
              class="rcx-box rcx-box--full rcx-pagination__list-item"
            >
              <button
                class="rcx-box rcx-box--full rcx-pagination__link"
                tabindex="0"
              >
                100
              </button>
            </li>
          </ol>
        </div>
        <div
          class="rcx-box rcx-box--full rcx-pagination__right"
        >
          <span
            class="rcx-box rcx-box--full rcx-pagination__label"
          >
            Showing results 1 - 5 of 30
          </span>
          <ol
            class="rcx-box rcx-box--full rcx-pagination__list"
          >
            <li
              class="rcx-box rcx-box--full rcx-pagination__list-item"
            >
              <button
                class="rcx-box rcx-box--full rcx-pagination__back"
                disabled=""
              >
                <span
                  class="rcx-box rcx-box--full rcx-chevron--left rcx-chevron"
                >
                  <i
                    aria-hidden="true"
                    class="rcx-box rcx-box--full rcx-icon--name-chevron-down rcx-icon rcx-css-1g87xs3"
                  >
                    
                  </i>
                </span>
              </button>
            </li>
            <li
              class="rcx-box rcx-box--full rcx-pagination__list-item"
            >
              <button
                class="rcx-box rcx-box--full rcx-pagination__link"
                disabled=""
              >
                1
              </button>
            </li>
            <li
              class="rcx-box rcx-box--full rcx-pagination__list-item"
            >
              <button
                class="rcx-box rcx-box--full rcx-pagination__link"
              >
                2
              </button>
            </li>
            <li
              class="rcx-box rcx-box--full rcx-pagination__list-item"
            >
              <button
                class="rcx-box rcx-box--full rcx-pagination__forward"
              >
                <span
                  class="rcx-box rcx-box--full rcx-chevron--right rcx-chevron"
                >
                  <i
                    aria-hidden="true"
                    class="rcx-box rcx-box--full rcx-icon--name-chevron-down rcx-icon rcx-css-1g87xs3"
                  >
                    
                  </i>
                </span>
              </button>
            </li>
          </ol>
        </div>
      </nav>
    </div>
  </div>
</body>
`;

exports[`renders withError without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-9x4qdd"
    >
      <div
        class="rcx-box rcx-box--full rcx-css-1wg1u9h"
      >
        <div
          class="rcx-states"
        >
          <i
            aria-hidden="true"
            class="rcx-box rcx-box--full rcx-states__icon rcx-icon--name-magnifier rcx-icon rcx-states__icon--danger rcx-css-d884y5"
          >
            
          </i>
          <h3
            class="rcx-states__title"
          >
            Something_went_wrong
          </h3>
          <div
            class="rcx-button-group rcx-button-group--align-start"
            role="group"
          >
            <button
              class="rcx-box rcx-box--full rcx-button--primary rcx-button rcx-button-group__item"
              type="button"
            >
              <span
                class="rcx-button--content"
              >
                Reload_page
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`renders withLoading without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-9x4qdd"
    >
      <div
        class="rcx-box rcx-box--full rcx-css-h9m6k6"
      >
        <div
          class="rcx-box rcx-box--full rcx-css-vlo1oi rcx-css-1cb6i7s"
          data-overlayscrollbars="host"
        >
          <div
            class="os-size-observer"
          >
            <div
              class="os-size-observer-listener"
            />
          </div>
          <div
            class=""
            data-overlayscrollbars-viewport="scrollbarHidden overflowXHidden overflowYHidden"
            style="margin-right: 0px; margin-bottom: 0px; margin-left: 0px; top: 0px; left: 0px; width: calc(100% + 0px); padding: 0px 0px 0px 0px;"
            tabindex="-1"
          >
            <div
              class="rcx-box rcx-box--full rcx-table__wrapper"
            >
              <table
                class="rcx-box rcx-box--full rcx-table--sticky rcx-table--fixed rcx-table"
              >
                <thead
                  class="rcx-box rcx-box--full rcx-table__head"
                >
                  <tr
                    class="rcx-box rcx-box--full rcx-table__row"
                  >
                    <th
                      class="rcx-box rcx-box--full rcx-table__cell--header rcx-table__cell"
                    >
                      <div
                        class="rcx-box rcx-box--full rcx-css-127j9mz"
                        wrap="no-wrap"
                      >
                        Name
                      </div>
                    </th>
                    <th
                      class="rcx-box rcx-box--full rcx-table__cell--header rcx-table__cell"
                    >
                      <div
                        class="rcx-box rcx-box--full rcx-css-127j9mz"
                        wrap="no-wrap"
                      >
                        Email
                      </div>
                    </th>
                    <th
                      class="rcx-box rcx-box--full rcx-table__cell--header rcx-table__cell rcx-css-wbqtoq"
                    >
                      <div
                        class="rcx-box rcx-box--full rcx-css-127j9mz"
                        wrap="no-wrap"
                      >
                        Actions
                      </div>
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="rcx-box rcx-box--full rcx-table__body"
                >
                  <tr
                    class="rcx-box rcx-box--full rcx-table__row"
                  >
                    <td
                      class="rcx-box rcx-box--full rcx-table__cell"
                    >
                      <div
                        class="rcx-box rcx-box--full rcx-css-1qvl0ud"
                      >
                        <span
                          class="rcx-skeleton rcx-skeleton--rect rcx-css-1oezft"
                        />
                        <div
                          class="rcx-box rcx-box--full rcx-css-1eminnr"
                        >
                          <span
                            class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                          />
                          <span
                            class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                          />
                        </div>
                      </div>
                    </td>
                    <td
                      class="rcx-box rcx-box--full rcx-table__cell"
                    >
                      <span
                        class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                      />
                    </td>
                    <td
                      class="rcx-box rcx-box--full rcx-table__cell"
                    >
                      <span
                        class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                      />
                    </td>
                  </tr>
                  <tr
                    class="rcx-box rcx-box--full rcx-table__row"
                  >
                    <td
                      class="rcx-box rcx-box--full rcx-table__cell"
                    >
                      <div
                        class="rcx-box rcx-box--full rcx-css-1qvl0ud"
                      >
                        <span
                          class="rcx-skeleton rcx-skeleton--rect rcx-css-1oezft"
                        />
                        <div
                          class="rcx-box rcx-box--full rcx-css-1eminnr"
                        >
                          <span
                            class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                          />
                          <span
                            class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                          />
                        </div>
                      </div>
                    </td>
                    <td
                      class="rcx-box rcx-box--full rcx-table__cell"
                    >
                      <span
                        class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                      />
                    </td>
                    <td
                      class="rcx-box rcx-box--full rcx-table__cell"
                    >
                      <span
                        class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                      />
                    </td>
                  </tr>
                  <tr
                    class="rcx-box rcx-box--full rcx-table__row"
                  >
                    <td
                      class="rcx-box rcx-box--full rcx-table__cell"
                    >
                      <div
                        class="rcx-box rcx-box--full rcx-css-1qvl0ud"
                      >
                        <span
                          class="rcx-skeleton rcx-skeleton--rect rcx-css-1oezft"
                        />
                        <div
                          class="rcx-box rcx-box--full rcx-css-1eminnr"
                        >
                          <span
                            class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                          />
                          <span
                            class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                          />
                        </div>
                      </div>
                    </td>
                    <td
                      class="rcx-box rcx-box--full rcx-table__cell"
                    >
                      <span
                        class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                      />
                    </td>
                    <td
                      class="rcx-box rcx-box--full rcx-table__cell"
                    >
                      <span
                        class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                      />
                    </td>
                  </tr>
                  <tr
                    class="rcx-box rcx-box--full rcx-table__row"
                  >
                    <td
                      class="rcx-box rcx-box--full rcx-table__cell"
                    >
                      <div
                        class="rcx-box rcx-box--full rcx-css-1qvl0ud"
                      >
                        <span
                          class="rcx-skeleton rcx-skeleton--rect rcx-css-1oezft"
                        />
                        <div
                          class="rcx-box rcx-box--full rcx-css-1eminnr"
                        >
                          <span
                            class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                          />
                          <span
                            class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                          />
                        </div>
                      </div>
                    </td>
                    <td
                      class="rcx-box rcx-box--full rcx-table__cell"
                    >
                      <span
                        class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                      />
                    </td>
                    <td
                      class="rcx-box rcx-box--full rcx-table__cell"
                    >
                      <span
                        class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                      />
                    </td>
                  </tr>
                  <tr
                    class="rcx-box rcx-box--full rcx-table__row"
                  >
                    <td
                      class="rcx-box rcx-box--full rcx-table__cell"
                    >
                      <div
                        class="rcx-box rcx-box--full rcx-css-1qvl0ud"
                      >
                        <span
                          class="rcx-skeleton rcx-skeleton--rect rcx-css-1oezft"
                        />
                        <div
                          class="rcx-box rcx-box--full rcx-css-1eminnr"
                        >
                          <span
                            class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                          />
                          <span
                            class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                          />
                        </div>
                      </div>
                    </td>
                    <td
                      class="rcx-box rcx-box--full rcx-table__cell"
                    >
                      <span
                        class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                      />
                    </td>
                    <td
                      class="rcx-box rcx-box--full rcx-table__cell"
                    >
                      <span
                        class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                      />
                    </td>
                  </tr>
                  <tr
                    class="rcx-box rcx-box--full rcx-table__row"
                  >
                    <td
                      class="rcx-box rcx-box--full rcx-table__cell"
                    >
                      <div
                        class="rcx-box rcx-box--full rcx-css-1qvl0ud"
                      >
                        <span
                          class="rcx-skeleton rcx-skeleton--rect rcx-css-1oezft"
                        />
                        <div
                          class="rcx-box rcx-box--full rcx-css-1eminnr"
                        >
                          <span
                            class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                          />
                          <span
                            class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                          />
                        </div>
                      </div>
                    </td>
                    <td
                      class="rcx-box rcx-box--full rcx-table__cell"
                    >
                      <span
                        class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                      />
                    </td>
                    <td
                      class="rcx-box rcx-box--full rcx-table__cell"
                    >
                      <span
                        class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                      />
                    </td>
                  </tr>
                  <tr
                    class="rcx-box rcx-box--full rcx-table__row"
                  >
                    <td
                      class="rcx-box rcx-box--full rcx-table__cell"
                    >
                      <div
                        class="rcx-box rcx-box--full rcx-css-1qvl0ud"
                      >
                        <span
                          class="rcx-skeleton rcx-skeleton--rect rcx-css-1oezft"
                        />
                        <div
                          class="rcx-box rcx-box--full rcx-css-1eminnr"
                        >
                          <span
                            class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                          />
                          <span
                            class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                          />
                        </div>
                      </div>
                    </td>
                    <td
                      class="rcx-box rcx-box--full rcx-table__cell"
                    >
                      <span
                        class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                      />
                    </td>
                    <td
                      class="rcx-box rcx-box--full rcx-table__cell"
                    >
                      <span
                        class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                      />
                    </td>
                  </tr>
                  <tr
                    class="rcx-box rcx-box--full rcx-table__row"
                  >
                    <td
                      class="rcx-box rcx-box--full rcx-table__cell"
                    >
                      <div
                        class="rcx-box rcx-box--full rcx-css-1qvl0ud"
                      >
                        <span
                          class="rcx-skeleton rcx-skeleton--rect rcx-css-1oezft"
                        />
                        <div
                          class="rcx-box rcx-box--full rcx-css-1eminnr"
                        >
                          <span
                            class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                          />
                          <span
                            class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                          />
                        </div>
                      </div>
                    </td>
                    <td
                      class="rcx-box rcx-box--full rcx-table__cell"
                    >
                      <span
                        class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                      />
                    </td>
                    <td
                      class="rcx-box rcx-box--full rcx-table__cell"
                    >
                      <span
                        class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                      />
                    </td>
                  </tr>
                  <tr
                    class="rcx-box rcx-box--full rcx-table__row"
                  >
                    <td
                      class="rcx-box rcx-box--full rcx-table__cell"
                    >
                      <div
                        class="rcx-box rcx-box--full rcx-css-1qvl0ud"
                      >
                        <span
                          class="rcx-skeleton rcx-skeleton--rect rcx-css-1oezft"
                        />
                        <div
                          class="rcx-box rcx-box--full rcx-css-1eminnr"
                        >
                          <span
                            class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                          />
                          <span
                            class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                          />
                        </div>
                      </div>
                    </td>
                    <td
                      class="rcx-box rcx-box--full rcx-table__cell"
                    >
                      <span
                        class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                      />
                    </td>
                    <td
                      class="rcx-box rcx-box--full rcx-table__cell"
                    >
                      <span
                        class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                      />
                    </td>
                  </tr>
                  <tr
                    class="rcx-box rcx-box--full rcx-table__row"
                  >
                    <td
                      class="rcx-box rcx-box--full rcx-table__cell"
                    >
                      <div
                        class="rcx-box rcx-box--full rcx-css-1qvl0ud"
                      >
                        <span
                          class="rcx-skeleton rcx-skeleton--rect rcx-css-1oezft"
                        />
                        <div
                          class="rcx-box rcx-box--full rcx-css-1eminnr"
                        >
                          <span
                            class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                          />
                          <span
                            class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                          />
                        </div>
                      </div>
                    </td>
                    <td
                      class="rcx-box rcx-box--full rcx-table__cell"
                    >
                      <span
                        class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                      />
                    </td>
                    <td
                      class="rcx-box rcx-box--full rcx-table__cell"
                    >
                      <span
                        class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                      />
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
          <div
            class="os-scrollbar os-scrollbar-horizontal os-theme-dark os-scrollbar-auto-hide os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-cornerless os-scrollbar-unusable"
            style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;"
          >
            <div
              class="os-scrollbar-track"
            >
              <div
                class="os-scrollbar-handle"
              />
            </div>
          </div>
          <div
            class="os-scrollbar os-scrollbar-vertical os-theme-dark os-scrollbar-auto-hide os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-cornerless os-scrollbar-unusable"
            style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;"
          >
            <div
              class="os-scrollbar-track"
            >
              <div
                class="os-scrollbar-handle"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`renders withNoResults without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-9x4qdd"
    >
      <div
        class="rcx-box rcx-box--full rcx-css-1wg1u9h"
      >
        <div
          class="rcx-states"
        >
          <i
            aria-hidden="true"
            class="rcx-box rcx-box--full rcx-states__icon rcx-icon--name-magnifier rcx-icon rcx-css-d884y5"
          >
            
          </i>
          <h3
            class="rcx-states__title"
          >
            No_results_found
          </h3>
        </div>
      </div>
    </div>
  </div>
</body>
`;
